# Files_Organizations

./: .gitignore  CMakeLists.txt  README.md
back-end/data_structures/: ExtandibleHashing.cpp  sequentialFile.cpp
back-end/parserSequential/: Parser.hpp  main.cpp
data_structures/avl/: Scanner.hpp  avl.cpp
data_structures/hashing/: Eh.cpp
parser_principal/: Parser.hpp  Scanner.hpp  Token.hpp  main.cpp
